// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account page account information displays basic user information 1`] = `
<dl class="account-page-info oc-flex oc-flex-wrap">
  <div class="account-page-info-username oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Username</dt>
    <dd>
      some-username
    </dd>
  </div>
  <!---->
  <div class="account-page-info-displayname oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Display name</dt>
    <dd>
      some-displayname
    </dd>
  </div>
  <div class="account-page-info-email oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Email</dt>
    <dd>some-email</dd>
  </div>
  <div class="account-page-info-groups oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">
      Group memberships
    </dt>
    <dd data-testid="group-names">
      <oc-spinner-stub aria-label="Loading group membership information"></oc-spinner-stub>
    </dd>
  </div>
</dl>
`;

exports[`account page account information group membership displays group names 1`] = `<dd data-testid="group-names"><span>one, two, three</span></dd>`;

exports[`account page header section edit buttons edit route button should be displayed if running with ocis and has navItems 1`] = `
<oc-button-stub variation="primary" type="router-link" to="some-route" data-testid="account-page-edit-route-btn">
  <oc-icon-stub name="edit"></oc-icon-stub>
  <translate-stub tag="span">Edit</translate-stub>
</oc-button-stub>
`;

exports[`account page header section edit buttons edit url button should be displayed if not running with ocis 1`] = `
<oc-button-stub variation="primary" type="a" href="http://server/address/index.php/settings/personal" data-testid="account-page-edit-url-btn">
  <oc-icon-stub name="edit"></oc-icon-stub>
  <translate-stub tag="span">Edit</translate-stub>
</oc-button-stub>
`;
